# mory

./: .env.template  .eslintrc.js  .gitignore  API_AUTHENTICATION.md  AUTO_ISSUE_FEATURE.md  CHANGELOG.md  Dockerfile  ISSUE_AUTOMATION_README.md  LICENSE  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vue.config.js
.github/: copilot-instructions.md
.github/workflows/: label-resolved-issues.yml
.mory/: default_task.template
backend/: .dockerignore  .env.template  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  TIMEZONE.md  bacon.toml  cache.sqlite  cliff.toml  test_openai.rs
backend/src/: main.rs
backend/tests/: integration_tests.rs
backend/tools/git-hooks/: post-receive
docker/: entrypoint.sh
docs/: API.md  DATA_FORMATS.md  EXAMPLES.md  FEATURES.md  QUICK_START.md  README.md  _sidebar.md  calendar.md  files.md  getting-started.md  index.html  issue-resolution-automation.md  markdown.md  quick-start.md  tasks.md
frontend/: .dockerignore  .env.template  .eslintrc.js  .gitignore  CHANGELOG.md  Dockerfile  README.md  babel.config.js  components.d.ts  eslint.config.js  index.html  package-lock.json  package.json  test-dateselector.html  tsconfig.json  vite.config.ts  vue.config.js
frontend/docker/: entrypoint.sh  nginx-default.conf
frontend/docs/: README.md  configuration.md  i18n.md  index.html  notes.md  route-favicons.md  search.md
frontend/public/: index.html  manifest.json  service-worker.js
frontend/src/: App.vue  api.ts  axios.ts  custom.scss  main.ts  markdown-worker-service.ts  markdown-worker.ts  markdown.ts  metadata-schema.json  rehype-lazy-load-images.ts  remark-frontmatter-parser.ts  remark-yaml-frontmatter.ts  task.ts  utils.ts
frontend/src/@types/: markdown-it-mermaid.d.ts  markdown-table-prettify.d.ts
frontend/src/api/: task.ts
frontend/src/components/: DateSelector-examples.vue  DateSelector.vue  EditableViewer.vue  Editor.vue  EffortDialog.vue  Gravatar.vue  ParentSelectionDialog.vue  TaskEditor.vue  TaskEditorNext.vue  TaskEisenhowerView.vue  TaskListItem.vue  TaskListItemNext.vue  TaskScheduleView.vue  TaskStackView.vue  TaskStatusView.vue  TaskTree.vue
frontend/src/composables/: localStorage.ts  vuetify.ts
frontend/src/locales/: en.json  ja.json
frontend/src/plugins/: i18n.ts  vuetify.ts
frontend/src/router/: index.ts
frontend/src/services/: autoIssueService.ts  faviconService.ts  issueDetector.ts
frontend/src/stores/: app.ts  taggedTaskForest.ts  taskForest.ts
frontend/tools/: README.md  generate-icons.sh  generate-route-favicons.js  generate-route-favicons.sh
public/: index.html  service-worker.js
scripts/: label-resolved-issues.js
src/: App.vue  api.ts  axios.ts  config.ts  custom.scss  main.ts  markdown-worker-service.ts  markdown.ts  metadata-schema.json  rehype-embed-line-numbers.ts  service-worker.js
src/api/: task.ts
src/components/: EditableViewer.vue  Editor.vue  Gravatar.vue  TaskDescendantsView.vue  TaskEditor.vue  TaskEditorNext.vue  TaskListItem.vue  TaskListItemNext.vue  TaskTree.vue
src/composables/: fetchTask.ts  useTaggedForest.ts  vue-router.ts
src/plugins/: vuetify.ts
src/router/: index.ts
src/stores/: app.ts  taggedTaskForest.ts  taskForest.ts
src/views/: About.vue  Calendar.vue  Config.vue  Files.vue  Find.vue  Home.vue  Media.vue  Note.vue  Search.vue  Tasks.vue  TasksNext.vue  View.vue
tools/: generate-icons.sh
(+14 files in other folders)
