[package]
name = "moried"
version = "1.0.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "1.0.0"
bytes = "1.4.0"
chrono = { version = "0.4.12", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
git2 = { version = "0.16", default-features = false }
jsonwebtoken = "8"
mime_guess = "2.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.17"
urlencoding = "2.1.2"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-macros = "0.4.1"
hyper = { version = "1.4.1", features = ["full"] }
rmp-serde = "1.1.2"
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.5.0", features = ["buffer", "limit", "load-shed"] }
tower-http = { version = "0.5.2", features = ["compression-gzip", "cors", "sensitive-headers", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
