[package]
name = "moried"
version = "1.1.0"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-argon2 = "2.1.0"
bytes = "1.7.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
futures = "0.3"
git2 = { version = "0.19", default-features = false }
jsonwebtoken = "9"
mime_guess = "2.0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34+deprecated"
urlencoding = "2.1.3"
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-macros = "0.4.1"
hyper = { version = "1.4.1", features = ["full"] }
rmp-serde = "1.3.0"
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.5.0", features = ["buffer", "limit", "load-shed"] }
tower-http = { version = "0.5.2", features = ["compression-gzip", "cors", "sensitive-headers", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
