[package]
name = "moried"
version = "1.3.1"
authors = ["Yuta Taniguchi <yuta.taniguchi.y.t@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.69", features = ["backtrace"] }
axum = { version = "0.7.5", features = ["macros", "multipart"] }
base16ct = "0.2.0"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
git2 = { version = "0.19", default-features = false }
jsonwebtoken = "9"
markdown = "=1.0.0-alpha.20"
mime_guess = "2.0.5"
rust-argon2 = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34+deprecated"
sha1 = "0.10.6"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
tempfile = "3.15.0"
tokio = { version = "1.39.2", features = ["full"] }
tower = { version = "0.5.0", features = ["buffer", "limit", "load-shed"] }
tower-http = { version = "0.5.2", features = ["compression-gzip", "cors", "sensitive-headers", "trace"] }
tracing = { version = "0.1", features = ["release_max_level_info"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
